--- a/source/_posts/2015-07-25-blogging-updated.html
+++ b/source/_posts/2015-07-25-blogging-updated.html
@@ -6,26 +6,13 @@ categories: 杂谈
 published: true
 comments: 
 ---
-<div id="table-of-contents">
-<h2>Table of Contents</h2>
-<div id="text-table-of-contents">
-<ul>
-<li><a href="#sec-1">1. 域名</a></li>
-<li><a href="#sec-2">2. Octopress</a></li>
-<li><a href="#sec-3">3. Hexo</a></li>
-<li><a href="#sec-4">4. Org-mode 和 Hexo3</a></li>
-<li><a href="#sec-5">5. 迁移</a></li>
-<li><a href="#sec-6">6. 小结</a></li>
-</ul>
-</div>
-</div>
 <p>
 很羡慕那些高产的博主，看下自己的上一篇文章还停留在1月份, 甚是惭愧. 最近，博客有一些好的变化，
 希望能激励自己，多学习， 多写文章。
 </p>
 
 <div id="outline-container-sec-1" class="outline-2">
-<h2 id="sec-1"><span class="section-number-2">1</span> 域名</h2>
+<h2 id="sec-1">域名</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 在网络上一直使用young40这个网名，所以十年前还在学校的时候注册过www.young40.com这个域名,
@@ -36,13 +23,13 @@ comments:
 </p>
 
 <p>
-
+<!-- more -->
 </p>
 </div>
 </div>
 
 <div id="outline-container-sec-2" class="outline-2">
-<h2 id="sec-2"><span class="section-number-2">2</span> Octopress</h2>
+<h2 id="sec-2">Octopress</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 之前也在博客园等地方写过博客，一方面因为懒癌产出甚少，另一方面没有归属感。Github Pages流行之
@@ -53,7 +40,7 @@ comments:
 </div>
 
 <div id="outline-container-sec-3" class="outline-2">
-<h2 id="sec-3"><span class="section-number-2">3</span> Hexo</h2>
+<h2 id="sec-3">Hexo</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 作为一个程序员，对各种语言本不该有偏见，但对于Ruby这种语言始终提不起兴趣，甚至到现在还没有看过他
@@ -64,7 +51,7 @@ comments:
 </div>
 
 <div id="outline-container-sec-4" class="outline-2">
-<h2 id="sec-4"><span class="section-number-2">4</span> Org-mode 和 Hexo3</h2>
+<h2 id="sec-4">Org-mode 和 Hexo3</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 自从被子龙山人带入了Emacs邪教，Emacs就侵噬着我心灵的方方面面，到现在已经恨不得所有的事情都在Emacs
@@ -77,18 +64,18 @@ org-octopress的过程中， 也随便将Hexo更新为了3.1.1版本.
 </div>
 
 <div id="outline-container-sec-5" class="outline-2">
-<h2 id="sec-5"><span class="section-number-2">5</span> 迁移</h2>
+<h2 id="sec-5">迁移</h2>
 <div class="outline-text-2" id="text-5">
 <p>
-Octopress迁移到Hexo，以及Hexo 2.x迁移到3.x，都是非常简单的. 基本上就是保存好自己的<sub>config</sub>.yml
+Octopress迁移到Hexo，以及Hexo 2.x迁移到3.x，都是非常简单的. 基本上就是保存好自己的_config.yml
 配置文件和source目录， 用新的(比如Hexo3)初始化一个新目录，然后将source目录放入新的目录, 
-将配置转移到新的<sub>config</sub>.yml中即可.
+将配置转移到新的_config.yml中即可.
 </p>
 </div>
 </div>
 
 <div id="outline-container-sec-6" class="outline-2">
-<h2 id="sec-6"><span class="section-number-2">6</span> 小结</h2>
+<h2 id="sec-6">小结</h2>
 <div class="outline-text-2" id="text-6">
 <p>
 最近为了使用Emacs，耗费了大量的精力来学习Emacs, Spacemacs, Org-mode, GTD等知识，这次对博客
