--- a/source/_posts/2015-09-12-easy-opengl-01.html
+++ b/source/_posts/2015-09-12-easy-opengl-01.html
@@ -1,8 +1,8 @@
 ---
-title: "[PREVIEW] 掌握 OpenGL01"
+title: "[PREVIEW] 简简单单 OpenGL 01"
 date: 2015-09-12
 layout: post
-categories: 掌握 OpenGL
+categories: 简简单单 OpenGL
 published: false
 comments: 
 ---
