--- a/source/_posts/2015-09-11-easy-opengl-00.html
+++ b/source/_posts/2015-09-11-easy-opengl-00.html
@@ -8,8 +8,16 @@ comments:
 ---
 <span style="background: red;">PREVIEW</span>
 <div id="outline-container-sec-1" class="outline-2">
-<h2 id="sec-1">版本</h2>
+<h2 id="sec-1">前言</h2>
 <div class="outline-text-2" id="text-1">
+<p>
+作为一个屌丝级的 Cocos 2D 程序员, 一直对像 Unreal 等 3D 引擎垂涎三尺
+</p>
+</div>
+</div>
+<div id="outline-container-sec-2" class="outline-2">
+<h2 id="sec-2">版本</h2>
+<div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li>OpenGL 4.1
 </li>
@@ -38,9 +46,9 @@ Win? iOS?
 </p>
 </div>
 </div>
-<div id="outline-container-sec-2" class="outline-2">
-<h2 id="sec-2"></h2>
-<div class="outline-text-2" id="text-2">
+<div id="outline-container-sec-3" class="outline-2">
+<h2 id="sec-3"></h2>
+<div class="outline-text-2" id="text-3">
 <p>
 <!-- more -->
 </p>
