--- a/source/_posts/2015-09-12-easy-opengl-01.html
+++ b/source/_posts/2015-09-12-easy-opengl-01.html
@@ -225,8 +225,17 @@ OpenGL, 比如, 我电脑上支持的最高版本 OpenGL 4.1.
 </div>
 
 <div id="outline-container-sec-8" class="outline-2">
-<h2 id="sec-8">其他</h2>
+<h2 id="sec-8">Tip</h2>
 <div class="outline-text-2" id="text-8">
+<ul class="org-ul">
+<li>OpenGL 的函数都是以 gl 开头
+</li>
+</ul>
+</div>
+</div>
+<div id="outline-container-sec-9" class="outline-2">
+<h2 id="sec-9">其他</h2>
+<div class="outline-text-2" id="text-9">
 <p>
 本文是系列文章的一部分, 您可以在下面链接找到本系列索引.
 [<a href="http://young40.com">http://young40.com</a>]
