--- a/source/_posts/2015-07-25-blogging-updated.html
+++ b/source/_posts/2015-07-25-blogging-updated.html
@@ -2,7 +2,9 @@
 title: "博客记"
 date: 2015-07-25
 layout: post
-categories: 杂谈
+categories: 
+- 杂谈
+tags: 
 published: true
 comments: 
 ---
@@ -10,9 +12,9 @@ comments:
 很羡慕那些高产的博主，看下自己的上一篇文章还停留在1月份, 甚是惭愧. 最近，博客有一些好的变化，希望能激励自己，多学习， 多写文章。
 </p>
 
-<div id="outline-container-sec-1" class="outline-2">
-<h2 id="sec-1">域名</h2>
-<div class="outline-text-2" id="text-1">
+<div id="outline-container-orgheadline1" class="outline-2">
+<h2 id="orgheadline1">域名</h2>
+<div class="outline-text-2" id="text-orgheadline1">
 <p>
 在网络上一直使用young40这个网名，所以十年前还在学校的时候注册过www.young40.com这个域名,
 但每年近百大洋的注册费用也是不小的负担，于是一两年后就停止续费了。上班了之后，想重新注册，发现已经被人注册，也联系不上注册者, 于是每年都会看下是否可以注册。上个月再次查看是否可以注册，我几乎不能相信自己的眼睛， 居然可以注册了，欣喜若狂，马上注册，相隔十年之后，再次拥有了这个域名。
@@ -24,9 +26,9 @@ comments:
 </div>
 </div>
 
-<div id="outline-container-sec-2" class="outline-2">
-<h2 id="sec-2">Octopress</h2>
-<div class="outline-text-2" id="text-2">
+<div id="outline-container-orgheadline2" class="outline-2">
+<h2 id="orgheadline2">Octopress</h2>
+<div class="outline-text-2" id="text-orgheadline2">
 <p>
 之前也在博客园等地方写过博客，一方面因为懒癌产出甚少，另一方面没有归属感。Github Pages流行之后，我也尝试在Github Pages上写博客了。 比较了几个Github Pages的博客工具之后，迅速被Octopress
 的强大，美观吸引了。是的，即使是默认主题，也是十分优美漂亮。
@@ -34,18 +36,18 @@ comments:
 </div>
 </div>
 
-<div id="outline-container-sec-3" class="outline-2">
-<h2 id="sec-3">Hexo</h2>
-<div class="outline-text-2" id="text-3">
+<div id="outline-container-orgheadline3" class="outline-2">
+<h2 id="orgheadline3">Hexo</h2>
+<div class="outline-text-2" id="text-orgheadline3">
 <p>
 作为一个程序员，对各种语言本不该有偏见，但对于Ruby这种语言始终提不起兴趣，甚至到现在还没有看过他的语法。Octopress基于Ruby, 速度上也一直被诟病。 我对Node.js虽然没有花费太多的力气学习，但内心深处还是很狂热地热爱着Node.js。Hexo是Node.js开发的, 所以很快就迁移到了Hexo上。
 </p>
 </div>
 </div>
 
-<div id="outline-container-sec-4" class="outline-2">
-<h2 id="sec-4">Org-mode 和 Hexo3</h2>
-<div class="outline-text-2" id="text-4">
+<div id="outline-container-orgheadline4" class="outline-2">
+<h2 id="orgheadline4">Org-mode 和 Hexo3</h2>
+<div class="outline-text-2" id="text-orgheadline4">
 <p>
 自从被子龙山人带入了Emacs邪教，Emacs就侵噬着我心灵的方方面面，到现在已经恨不得所有的事情都在Emacs
 里面完成。Org-mode作为Emacs特有的特性，也是必须学习和使用的，自然写博客这种事情， 也必须在Org-mode
@@ -56,9 +58,9 @@ org-octopress的过程中， 也随便将Hexo更新为了3.1.1版本.
 </div>
 </div>
 
-<div id="outline-container-sec-5" class="outline-2">
-<h2 id="sec-5">迁移</h2>
-<div class="outline-text-2" id="text-5">
+<div id="outline-container-orgheadline5" class="outline-2">
+<h2 id="orgheadline5">迁移</h2>
+<div class="outline-text-2" id="text-orgheadline5">
 <p>
 Octopress迁移到Hexo，以及Hexo 2.x迁移到3.x，都是非常简单的. 基本上就是保存好自己的_config.yml
 配置文件和source目录， 用新的(比如Hexo3)初始化一个新目录，然后将source目录放入新的目录, 
@@ -67,9 +69,9 @@ Octopress迁移到Hexo，以及Hexo 2.x迁移到3.x，都是非常简单的. 基
 </div>
 </div>
 
-<div id="outline-container-sec-6" class="outline-2">
-<h2 id="sec-6">小结</h2>
-<div class="outline-text-2" id="text-6">
+<div id="outline-container-orgheadline6" class="outline-2">
+<h2 id="orgheadline6">小结</h2>
+<div class="outline-text-2" id="text-orgheadline6">
 <p>
 最近为了使用Emacs，耗费了大量的精力来学习Emacs, Spacemacs, Org-mode, GTD等知识，这次对博客进行了一次升级, 希望能激励自己多些文章， 将最近学习Emacs等心得都分享出来.
 </p>
