--- a/source/_posts/2015-09-11-easy-opengl-00.html
+++ b/source/_posts/2015-09-11-easy-opengl-00.html
@@ -2,32 +2,31 @@
 title: "[PREVIEW] 简简单单 OpenGL 00"
 date: 2015-09-11
 layout: post
-categories: 简简单单 OpenGL
+categories: 
+- 简简单单 
+- OpenGL
+tags: 
 published: false
 comments: 
 ---
 <span style="background: red;">PREVIEW</span>
-<div id="outline-container-sec-1" class="outline-2">
-<h2 id="sec-1">前言</h2>
-<div class="outline-text-2" id="text-1">
+<div id="outline-container-orgheadline1" class="outline-2">
+<h2 id="orgheadline1">前言</h2>
+<div class="outline-text-2" id="text-orgheadline1">
 <p>
-作为一个屌丝级的 Cocos 2D 程序员, 一直对像 Unreal 等 3D 引擎垂涎三尺
+作为一个屌丝级的 Cocos 2D 程序员, 一直对 Unreal 等 3D 引擎垂涎三尺, 但苦于各种因素限制(主要是懒), 屡屡想征服 3D, 屡屡败下阵来. 
 </p>
 </div>
 </div>
-<div id="outline-container-sec-2" class="outline-2">
-<h2 id="sec-2">版本</h2>
-<div class="outline-text-2" id="text-2">
+<div id="outline-container-orgheadline2" class="outline-2">
+<h2 id="orgheadline2">版本</h2>
+<div class="outline-text-2" id="text-orgheadline2">
 <ul class="org-ul">
-<li>OpenGL 4.1
-</li>
-<li>GLFW 3.1.1
-</li>
+<li>OpenGL 4.1</li>
+<li>GLFW 3.1.1</li>
 
-<li>OS X El Capitan 10.11(GM)
-</li>
-<li>Xcode 7.0(GM)
-</li>
+<li>OS X El Capitan 10.11(GM)</li>
+<li>Xcode 7.0(GM)</li>
 </ul>
 
 
@@ -46,9 +45,9 @@ Win? iOS?
 </p>
 </div>
 </div>
-<div id="outline-container-sec-3" class="outline-2">
-<h2 id="sec-3"></h2>
-<div class="outline-text-2" id="text-3">
+<div id="outline-container-orgheadline3" class="outline-2">
+<h2 id="orgheadline3"></h2>
+<div class="outline-text-2" id="text-orgheadline3">
 <p>
 <!-- more -->
 </p>
