--- a/source/_posts/2016-01-11-easy-opengl-100.html
+++ b/source/_posts/2016-01-11-easy-opengl-100.html
@@ -2,26 +2,29 @@
 title: "[PREVIEW] 简简单单 OpenGL 附录"
 date: 2016-01-01
 layout: post
-categories: 简简单单 OpenGL
+categories: 
+- 简简单单 
+- OpenGL
+tags: 
 published: false
 comments: 
 ---
 <span style="background: red;">PREVIEW</span>
-<div id="outline-container-sec-1" class="outline-2">
-<h2 id="sec-1">参考资料</h2>
-<div class="outline-text-2" id="text-1">
-</div><div id="outline-container-sec-1-1" class="outline-3">
-<h3 id="sec-1-1">书籍</h3>
+<div id="outline-container-orgheadline5" class="outline-2">
+<h2 id="orgheadline5">参考资料</h2>
+<div class="outline-text-2" id="text-orgheadline5">
+</div><div id="outline-container-orgheadline1" class="outline-3">
+<h3 id="orgheadline1">书籍</h3>
 </div>
-<div id="outline-container-sec-1-2" class="outline-3">
-<h3 id="sec-1-2">博客</h3>
+<div id="outline-container-orgheadline2" class="outline-3">
+<h3 id="orgheadline2">博客</h3>
 </div>
-<div id="outline-container-sec-1-3" class="outline-3">
-<h3 id="sec-1-3">视频</h3>
+<div id="outline-container-orgheadline3" class="outline-3">
+<h3 id="orgheadline3">视频</h3>
 </div>
-<div id="outline-container-sec-1-4" class="outline-3">
-<h3 id="sec-1-4">文章</h3>
-<div class="outline-text-3" id="text-1-4">
+<div id="outline-container-orgheadline4" class="outline-3">
+<h3 id="orgheadline4">文章</h3>
+<div class="outline-text-3" id="text-orgheadline4">
 <p>
 <!-- more -->
 </p>
