--- a/index.html
+++ b/index.html
@@ -376,6 +376,14 @@ MetalKit提供的MTKView更为方便快捷. </p>
   <span class="power-by">
     由 <a class="hexo-link" href="https://gohugo.io">Hugo</a> 强力驱动
   </span>
+
+  <span class="division">|</span>
+
+  <span class="theme-info">
+      Network by
+      <a class="theme-link" href="https://www.netlify.com">Netlify</a>
+  </span>
+
   <span class="division">|</span>
   <span class="theme-info">
     主题 - 
